--- a/src/app/planner/planner.component.scss
+++ b/src/app/planner/planner.component.scss
@@ -77,3 +77,10 @@
   overflow-y: auto;
   justify-content: center;
 }
+
+.tab-container {
+  padding: 1rem;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
